tests/neg/4382.scala
trait x0[x0[_]] {
  (??? : x0[_]): x0[Int] // error
}
